--- a/web_responsive/static/src/less/form_view.less
+++ b/web_responsive/static/src/less/form_view.less
@@ -57,10 +57,10 @@
             text-align: center;
         }
         > .fa.o_select_file_button {
-            background: #7c7bad;
+            background: @odoo-brand-primary;
         }
         > .fa.o_clear_file_button {
-            background: #d9534f;
+            background: @brand-danger;
         }
     }
 }
