--- a/web_responsive/static/src/less/form_view.less
+++ b/web_responsive/static/src/less/form_view.less
@@ -1,12 +1,23 @@
+/* Copyright 2016 LasLabs Inc.
+ * License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl). */
+
 .o_form_view {
     > .o_form_sheet_bg > .o_form_sheet {
          @media (max-width: @screen-xs-max) {
              min-width: 0px; // allow thinner form_sheet width for smaller screens
          }
     }
+    @media (max-width: @screen-xs) {
+        .o_form_field > .o_form_input_dropdown {
+            width: 80%;
+        }
+    }
     .o_group {
         &.o_inner_group > tbody > tr > td {
             white-space: nowrap; // prevent td content from breaking into lines
+            .note-editor > .note-toolbar {
+                white-space: initial;
+            }
         }
         // reduce form maximum columns for smaller screens
         @media (max-width: @screen-xs-max) {
